--- a/style.css
+++ b/style.css
@@ -1,43 +1,48 @@
-.cols{
-  width: 100px;
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    font-family: 'Source Sans Pro', sans-serif;
 }
-.rows{
-  height: 100px;
-  display: flex;
-  justify-content: space-around;
+
+#heading {
+    font-size: 40px;
+    font-weight: lighter;
+    text-shadow: 0px 1px 5px #e8e8e8;
+    margin: 10vh 0px;
 }
-.border{
-  border: 2px dotted brown;
+
+.box {
+    border: 1px solid #090909;
+    width: 8vw;
+    height: 8vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
 }
-.grid{
-  width: fit-content;
-  margin: auto;
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 20px, 0px;
 }
-#one{
- border-top: none;
- border-left: none;
+
+#reset{
+    color: #090909;
+    background-color:  #e8e8e8;
+    padding: 10px 40px;
+    width: auto;
+    border: none;
+    border-radius: 30px;
+    margin-top: 20px;
+    transition: 0.4s;
 }
-#two{
-  border: none;
+#reset:hover{
+    transform: scale(1.1);
+    cursor: pointer;
 }
-#three{
-  border-top: none;
- border-right: none;
-}
-#four{
-  border: none;
-}
-#six{
-  border: none;
-}
-#seven{
-  border-bottom: none;
-  border-left: none;
-}
-#eight{
-  border: none;
-}
-#nine{
-  border-bottom: none;
-  border-right: none;
+#reset:active{
+    transform: scale(0.9);
 }
